plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'checkstyle'
}

version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

repositories {
	flatDir {
		dirs 'libs'
	}

	maven {
		name = "Maven Central"
		url = "https://repo.maven.apache.org/maven2"
	}

	maven {
		name = "Xander Maven"
		url = "https://maven.isxander.dev/releases"
		content {
			includeGroup "dev.isxander"
			includeGroup "org.quiltmc.parsers"
		}
	}

	def azureAaronMaven = maven {
		name = "AzureAaron Maven"
		url = "https://maven.azureaaron.net/releases"
	}
	exclusiveContent {
		forRepositories(azureAaronMaven)
		filter {
			includeGroup "net.azureaaron"
		}
	}

	def terraformersmcMaven = maven {
		name = "TerraformersMC Maven"
		url = "https://maven.terraformersmc.com"
	}
	exclusiveContent {
		forRepositories(terraformersmcMaven)
		filter {
			includeGroup "com.terraformersmc"
		}
	}

	def shedanielMaven = maven {
		name = "shedaniel Maven"
		url = "https://maven.shedaniel.me/"
	}
	exclusiveContent {
		forRepositories(shedanielMaven)
		filter {
			includeGroup "me.shedaniel"
			includeGroup "me.shedaniel.cloth"
			includeGroup "dev.architectury"
		}
	}

	def modrinthMaven = maven {
		name = "Modrinth Maven"
		url = "https://api.modrinth.com/maven"
	}
	exclusiveContent {
		forRepositories(modrinthMaven)
		filter {
			includeGroup "maven.modrinth"
		}
	}

	def djtheredstonerMaven = maven {
		name = "djtheredstoner Maven"
		url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
	}
	exclusiveContent {
		forRepositories(djtheredstonerMaven)
		filter {
			includeGroup("me.djtheredstoner")
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// YetAnotherConfigLib (https://github.com/isXander/YetAnotherConfigLib)
	include implementation("dev.isxander:yet-another-config-lib:${project.yacl_version}")

	// Hypixel Mod API (https://github.com/HypixelDev/ModAPI)
	include implementation("net.azureaaron:hm-api:${project.hypixel_mod_api_version}")

	// ModMenu (https://github.com/TerraformersMC/ModMenu)
	compileOnly "com.terraformersmc:modmenu:${modmenu_version}"

	// RoughlyEnoughItems (https://github.com/shedaniel/RoughlyEnoughItems)
//	compileOnly("me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}") {
//		exclude group: "net.fabricmc.fabric-api"
//	}

	// JustEnoughItems (https://github.com/mezz/JustEnoughItems)
	compileOnly "maven.modrinth:jei:${project.jei_version}-fabric"

	// DevAuth - DEV (https://github.com/DJtheRedstoner/DevAuth)
	runtimeOnly "me.djtheredstoner:DevAuth-fabric:${devauth_version}"

	// JSpecify - DEV (https://github.com/jspecify/jspecify)
	compileOnly "org.jspecify:jspecify:1.0.0"
}

base {
	archivesName = project.archives_base_name
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
}

loom {
	runs {
		client {
			if (System.getenv('GITHUB_ACTIONS') != 'true') {
				property("devauth.configDir", file(".devauth").absolutePath)
			}
		}
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

checkstyle {
	toolVersion = "10.20.2"
	configFile = rootProject.file("checkstyle.xml")
	sourceSets = [sourceSets.main]
	ignoreFailures = false
}

jar {
	from("LICENSE") {
		rename {
			"${it}_${base.archivesName.get()}"
		}
	}
}
